--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ textarea {
 
 @media only screen and (min-width: 320px) {
   section:nth-of-type(2n+1) {
-    background-color: #e62e00;
+    background-color: #cc0000;
     box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.2);
     color: white;
     transform: skew(0deg, -2deg);
@@ -180,7 +180,7 @@ textarea {
     position: fixed;
     z-index: 2;
     color: #cc0000;
-    background-color: #e62e00;
+    background-color: #cc0000;
     width: 100%;
     box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.4);
   }
@@ -305,7 +305,7 @@ textarea {
 
 .question {
   width: 100%;
-  background-color: #e62e00;
+  background-color: #cc0000;
   margin-bottom: 1em;
   margin: 1em;
   padding: 1em;
@@ -318,7 +318,7 @@ textarea {
 }
 
 footer {
-  background-color: #e62e00;
+  background-color: #cc0000;
   text-align: center;
   box-shadow: 0px -10px 15px 0px rgba(0, 0, 0, 0.2);
   margin-top: 4em;
@@ -385,7 +385,7 @@ footer {
   nav a:hover {
     color: white;
     text-decoration: none;
-    background-color: #e62e005e;
+    background-color: #cc00005e;
   }
   header {
     display: flex;
