--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ body,
   scroll-behavior: smooth
 }
 
+.js-btn{
+  cursor: pointer !important;
+}
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
