--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ html {
   font-size: 1em;
   line-height: 1.4;
   font-family: 'Lato', sans-serif;
+  background: #fff;
 }
 
 body,
@@ -25,6 +26,7 @@ body,
 .js-btn{
   cursor: pointer !important;
 }
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
@@ -36,12 +38,12 @@ body,
  */
 
 ::-moz-selection {
-  background: #cc0000;
+  background: #b3d4fc;
   text-shadow: none;
 }
 
 ::selection {
-  background: #cc0000;
+  background: #b3d4fc;
   text-shadow: none;
 }
 
@@ -104,7 +106,7 @@ textarea {
 
 @media only screen and (min-width: 320px) {
   section:nth-of-type(2n+1) {
-    background-color: #cc0000;
+    background-color: #cc00000;
     box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.2);
     color: white;
     transform: skew(0deg, -2deg);
@@ -112,15 +114,14 @@ textarea {
   .odd {
     transform: skew(0deg, 2deg);
   }
-  a{
+  a {
     color: black;
-    
   }
   #particles-js {
     margin-top: -2em;
     width: 100%;
     height: 100%;
-    background-color: #007562;
+    background-color: #ffffff;
     background-image: url("");
     background-repeat: no-repeat;
     background-size: cover;
@@ -129,14 +130,14 @@ textarea {
     box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.2);
   }
   .title {
-    color: white;
+    color: black;
     font-size: 3em;
     margin: 0;
     position: absolute;
     left: 50%;
     top: 50%;
     z-index: 1;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -30%);
     text-transform: uppercase;
     font-weight: bold;
   }
@@ -182,22 +183,10 @@ textarea {
     display: none;
     position: fixed;
     z-index: 2;
-<<<<<<< HEAD
-    color: #cc0000;
-    background-color: #cc0000;
+    color: #cc00000;
+    background-color: #cc00000;
     width: 100%;
     box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.4);
-<<<<<<< HEAD
-=======
-=======
->>>>>>> parent of 69e3505... header skew
-=======
-    color: #007562;
-    background-color: #007562d0;
-    width: 100%;
-    height: 100vh;
->>>>>>> parent of 2ded37f... Merge pull request #1 from Gravium/master
->>>>>>> parent of e122be3... Revert "fixes"
   }
   .open {
     display: block;
@@ -207,14 +196,11 @@ textarea {
     height: 100vh;
     margin-top: 0;
   }
-
-  .open .logo{
-    
+  .open .logo {
     position: absolute;
     left: 50%;
     top: 1em;
     transform: translateX(-50%);
-
   }
   header nav {
     text-align: center;
@@ -224,7 +210,7 @@ textarea {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -120%)
   }
   header li {
     list-style: none;
@@ -323,7 +309,7 @@ textarea {
 
 .question {
   width: 100%;
-  background-color: #cc0000;
+  background-color: #cc00000;
   margin-bottom: 1em;
   margin: 1em;
   padding: 1em;
@@ -336,7 +322,7 @@ textarea {
 }
 
 footer {
-  background-color: #cc0000;
+  background-color: #cc00000;
   text-align: center;
   box-shadow: 0px -10px 15px 0px rgba(0, 0, 0, 0.2);
   margin-top: 4em;
@@ -385,25 +371,14 @@ footer {
     margin-left: auto;
   }
   .header__nav ul {
-<<<<<<< HEAD
     width: 100%;
     transform: translate(-50%, -120%) skew(0, 2deg);
     margin-top: 2em;
-<<<<<<< HEAD
-=======
-=======
->>>>>>> parent of 69e3505... header skew
-=======
-    display: flex;
-    position: static;
-    transform: translate(0.0);
-    left: unset;
->>>>>>> parent of 2ded37f... Merge pull request #1 from Gravium/master
->>>>>>> parent of e122be3... Revert "fixes"
   }
   .header__nav li {
     list-style: none;
     padding: 0.5em 1em;
+    display: inline;
   }
   header nav a {
     color: white;
@@ -414,12 +389,11 @@ footer {
   nav a:hover {
     color: white;
     text-decoration: none;
-    background-color: #cc00005e;
+    background-color: #cc000005e;
   }
   header {
     display: flex;
     justify-content: flex-end;
-<<<<<<< HEAD
     transform: translate(0, 0) skew(0deg, -2deg);
     text-align: center;
     left: 0;
@@ -429,16 +403,6 @@ footer {
     height: 0px;
     margin-top: -2em;
     padding: 4em 3em;
-=======
-    transform: translate(0, 0);
-    text-align: left;
-    left: 0;
-    right: 0;
-    top: 0;
-    z-index: 1;
-    height: auto;
-    padding: 2em 3em;
->>>>>>> parent of e122be3... Revert "fixes"
     width: unset;
   }
   .title {
