--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ textarea {
 
 @media only screen and (min-width: 320px) {
   section:nth-of-type(2n+1) {
-    background-color: #cc00000;
+    background-color: #cc0000;
     box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.2);
     color: white;
     transform: skew(0deg, -2deg);
@@ -183,8 +183,8 @@ textarea {
     display: none;
     position: fixed;
     z-index: 2;
-    color: #cc00000;
-    background-color: #cc00000;
+    color: #cc0000;
+    background-color: #cc0000;
     width: 100%;
     box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.4);
   }
@@ -309,7 +309,7 @@ textarea {
 
 .question {
   width: 100%;
-  background-color: #cc00000;
+  background-color: #cc0000;
   margin-bottom: 1em;
   margin: 1em;
   padding: 1em;
@@ -322,7 +322,7 @@ textarea {
 }
 
 footer {
-  background-color: #cc00000;
+  background-color: #cc0000;
   text-align: center;
   box-shadow: 0px -10px 15px 0px rgba(0, 0, 0, 0.2);
   margin-top: 4em;
@@ -389,7 +389,7 @@ footer {
   nav a:hover {
     color: white;
     text-decoration: none;
-    background-color: #cc000005e;
+    background-color: #cc00005e;
   }
   header {
     display: flex;
