--- a/css/button.css
+++ b/css/button.css
@@ -1,45 +1,103 @@
+.fill:hover,
+.fill:focus {
+  box-shadow: inset 0 0 0 2em var(--hover);
+}
 
-// Size can also be negative; see how it's smaller than the element
+.pulse:hover,
+.pulse:focus {
+  -webkit-animation: pulse 1s;
+          animation: pulse 1s;
+  box-shadow: 0 0 0 2em rgba(255, 255, 255, 0);
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 var(--hover);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 var(--hover);
+  }
+}
+.close:hover,
+.close:focus {
+  box-shadow: inset -3.5em 0 0 0 var(--hover), inset 3.5em 0 0 0 var(--hover);
+}
+
 .raise:hover,
 .raise:focus {
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
-  transform: translateY(-0.25em);
+  -webkit-transform: translateY(-0.25em);
+          transform: translateY(-0.25em);
 }
 
-
-
-$colors: (
-  raise: #e60000
-);
-
-// Sass variables compile to a static string; CSS variables are dynamic and inherited
-  // Loop through the map and set CSS custom properties using Sass variables
-@each $button, $color in $colors {
-  .#{$button} {
-    --color: #{$color};
-    --hover: #{ #e60000};
-  }
+.up:hover,
+.up:focus {
+  box-shadow: inset 0 -3.25em 0 0 var(--hover);
 }
 
-// Now every button will have different colors as set above. We get to use the same structure, only changing the custom properties.
-button {  
+.slide:hover,
+.slide:focus {
+  box-shadow: inset 6.5em 0 0 0 var(--hover);
+}
+
+.offset {
+  box-shadow: 0.3em 0.3em 0 0 var(--color), inset 0.3em 0.3em 0 0 var(--color);
+}
+.offset:hover, .offset:focus {
+  box-shadow: 0 0 0 0 var(--hover), inset 6em 3.5em 0 0 var(--hover);
+}
+
+.fill {
+  --color: #a972cb;
+  --hover: #cb72aa;
+}
+
+.pulse {
+  --color: #ef6eae;
+  --hover: #ef8f6e;
+}
+
+.close {
+  --color: #ff7f82;
+  --hover: #ffdc7f;
+}
+
+.raise {
+  --color: #cc0000;
+  --hover: #cc0000;
+}
+
+.up {
+  --color: #e4cb58;
+  --hover: #94e458;
+}
+
+.slide {
+  --color: #8fc866;
+  --hover: #66c887;
+}
+
+.offset {
+  --color: #19bc8b;
+  --hover: #1973bc;
+}
+
+button {
   color: var(--color);
-  transition: 0.25s;
-  
-  &:hover,
-  &:focus { 
-    border-color: var(--hover);
-    color: #fff;
-  }
+  transition: 0.01s;
+}
+button:hover, button:focus {
+  border-color: var(--hover);
+  color: #fff;
 }
 
-//=== Pen styling, ignore
 body {
   color: #fff;
-  background: hsl(227, 10%, 10%);
+  background: #17181c;
   font: 300 1em 'Fira Sans', sans-serif;
-  
-  // Center everything ever
   justify-content: center;
   align-content: center;
   align-items: center;
@@ -48,10 +106,9 @@ body {
   display: flex;
 }
 
-// Basic button styles
 button {
   background: none;
-  border: 3px solid;
+  border: 2px solid;
   font: inherit;
   line-height: 1;
   margin: 0.5em;
@@ -59,9 +116,11 @@ button {
   border-radius: 25px;
 }
 
-h1 { font-weight: 400; }
+h1 {
+  font-weight: 400;
+}
 
-code { 
-  color: #ff6666;
+code {
+  color: #cc0000;
   font: inherit;
 }
