--- a/css/button.css
+++ b/css/button.css
@@ -103,6 +103,12 @@ button {
   padding: 1em 2em;
   border-radius: 25px;
 }
+.buttons img {
+  height: 1em;
+  width: 1em;
+  margin-bottom: 1em;
+  display: block;
+}
 
 h1 {
   font-weight: 400;
