--- a/css/style.css
+++ b/css/style.css
@@ -581,3 +581,17 @@ footer {
     page-break-after: avoid;
   }
 }
+/* Create four equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 25%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
