--- a/css/style.css
+++ b/css/style.css
@@ -595,3 +595,11 @@ footer {
     display: table;
     clear: both;
 }
+#div1 {
+ width:950px;
+ height:100px;
+}
+#div2 {
+ width:950px;
+ height:100px;
+}
