--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ hr {
   height: 1px;
   border: 0;
   border-top: 1px solid #ccc;
-  margin: 1em 0;
+  margin: 1em;
   padding: 0;
 }
 
@@ -138,7 +138,7 @@ textarea {
     left: 50%;
     top: 50%;
     z-index: 1;
-    transform: translate(-50%, -30%);
+    transform: translate(-50%, -50%);
     text-transform: uppercase;
     font-weight: bold;
   }
