--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ hr {
   height: 1px;
   border: 0;
   border-top: 1px solid #ccc;
-  margin: 1em;
+  margin: 1em 0;
   padding: 0;
 }
 
@@ -138,7 +138,7 @@ textarea {
     left: 50%;
     top: 50%;
     z-index: 1;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -30%);
     text-transform: uppercase;
     font-weight: bold;
   }
@@ -211,7 +211,7 @@ textarea {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-120%, -120%)
+    transform: translate(-50%, -120%)
   }
   header li {
     list-style: none;
@@ -402,7 +402,7 @@ footer {
     z-index: 100;
     height: 0px;
     margin-top: -2em;
-    padding: 4em 4em;
+    padding: 4em 3em;
     width: unset;
   }
   .title {
