--- a/css/button.css
+++ b/css/button.css
@@ -153,15 +153,17 @@ code {
 }
 .buttond {
   display: inline-block;
+  border: 2px solid;
   border-radius: 25px;
-  background-color: #f4511e;
+  background-color: none;
   border: 4px;
   color: #FFFFFF;
   text-align: center;
-  font-size: 5px;
-  padding: 20px;
+  font-size: 10px;
+  padding: 1em 2em;
   width: 200px;
+  line-height: 1;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 5px;
+  margin: 0.5px;
 }
