--- a/css/button.css
+++ b/css/button.css
@@ -136,6 +136,7 @@ button {
   padding: 1em 2em;
   border-radius: 25px;
 }
+button:focus {outline:0 !important;}
 .buttons img {
   height: 1em;
   width: 1em;
