--- a/css/style.css
+++ b/css/style.css
@@ -602,3 +602,11 @@ footer {
  width: 950px;
  height:  100px;
 }
+section::before { 
+  display: block; 
+  content: " "; 
+  margin-top: -285px; 
+  height: 285px; 
+  visibility: hidden; 
+  pointer-events: none;
+}
