--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,10 @@ textarea {
   text-align: center;
   font-size: 2.5em;
 }
-
+.blocktitlehalf {
+  text-align: center;
+  font-size: 2em;
+}
 .subtitle {
   text-align: center;
 }
