--- a/css/button.css
+++ b/css/button.css
@@ -33,8 +33,8 @@
           transform: translateY(-0.25em);
   background-color: #cc0000;
 }
-.raisel:hover,
-.raisel:focus {
+.raiseb:hover,
+.raiseb:focus {
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
   -webkit-transform: translateY(-0.25em);
           transform: translateY(-0.25em);
@@ -91,9 +91,9 @@
   --color: #cc0000;
   --hover: #cc0000;
 }
-.raisel {
-  --color: #cc0000;
-  --hover: #cc0000;
+.raiseb {
+  --color: #0000ff;
+  --hover: #0000ff;
 }
 .raisem {
   --color: #cc0000;
