--- a/css/button.css
+++ b/css/button.css
@@ -92,8 +92,8 @@
   --hover: #cc0000;
 }
 .raiseb {
-  --color: #0000ff;
-  --hover: #0000ff;
+  --color: #ff66ff;
+  --hover: #ff66ff;
 }
 .raisem {
   --color: #cc0000;
